修复编译错误